Bug 108909 - UI: Menu bar items should be highlighted on mouse over (default Windows behavior)
Summary: UI: Menu bar items should be highlighted on mouse over (default Windows behav...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All Windows (All)
: medium trivial
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
: 109031 (view as bug list)
Depends on:
Blocks: Main-Menu RenderContext
  Show dependency treegraph
 
Reported: 2017-07-02 19:48 UTC by Telesto
Modified: 2019-05-23 07:12 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (433.50 KB, video/x-msvideo)
2017-07-02 19:51 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-07-02 19:48:52 UTC
Description:
Menu items should be highlighted on mouse over (it's the default Windows application behavior). It used to work before.

Steps to Reproduce:
1. Open Writer (or any other LibO application)
2. Move the mouse pointer over the menu bar. 

Actual Results:  
No highlighting at all

Expected Results:
Items should be highlighted


Reproducible: Always

User Profile Reset: No

Additional Info:
Found in
Version: 6.0.0.0.alpha0+
Build ID: cac5c9f6081590b0548d3116bc4cd4a2509ec576
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-01_00:41:48
Locale: nl-NL (nl_NL); Calc: CL

and in
Versie: 5.0.0.1 

but not in
Versie: 4.4.6.3 
Build ID: e8938fd3328e95dcf59dd64e7facd2c7d67c704d
Locale: nl_NL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Telesto 2017-07-02 19:51:11 UTC
Created attachment 134436 [details]
Screencast
Comment 2 Buovjaga 2017-07-06 11:42:16 UTC
Repro.

Version: 6.0.0.0.alpha0+ (x64)
Build ID: e0f67add2ec56706ce06a03572535266f21c0303
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-06-27_23:04:56
Locale: fi-FI (fi_FI); Calc: group
Comment 3 Aron Budea 2017-07-06 20:37:12 UTC
I can confirm it started with the same commit as bug 105863.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=458a827e96523ac52d021f1fd3653b5a734940c0
author		Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-15 11:50:30 (GMT)
committer	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-16 12:57:16 (GMT)

"further refactor Menu to use RenderContext"
Comment 4 Telesto 2017-07-09 11:29:17 UTC
*** Bug 109031 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2018-06-05 21:16:12 UTC
Adding Cc: to Tomaž Vajngerl
Comment 6 Telesto 2018-08-22 21:08:19 UTC
I fiddled around a bit; without knowing what I'm doing.

The menu is working properly when pressing Alt first (so alt + mouse-over) 

Commenting out "return" at: https://opengrok.libreoffice.org/xref/core/vcl/source/window/menubarwindow.cxx#452 will improve things to. Except that the menu immediately expands at mouse-over.
 
Setting autopopup to false fixes that: https://opengrok.libreoffice.org/xref/core/vcl/source/window/menubarwindow.cxx#125

It won't expand at each mouse-over event. However the active popup isn't killed when clicking somewhere in the document. On mouse over it popups up again. 

Pressing ESC instead of clicking somewhere is working
Comment 7 Commit Notification 2019-05-22 18:34:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/bdac08d52f7f264a5d67723cae63533493b3f580%5E%21

tdf#108909 vcl menu bar window: fix missing highlight on mouse over

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.