tdf#108909 vcl menu bar window: fix missing highlight on mouse over

Regression from commit 458a827e96523ac52d021f1fd3653b5a734940c0 (further
refactor Menu to use RenderContext, 2015-05-15), the problem was that
this highlight on the menu bar on mouse move was only part of the
incremental paint, never the full paint.

So when that commit removed incremental paint, we lost highlight on
mouse move (move only, click is there).

Later commit 843b9d5dba5098c2676491dda66bed31e57f4329 (VCL add support
for rollover menubars, 2016-09-22) added this code back, conditionally
for the case when there is not enough space for the menu bar
horizontally.

So fix the lack of highlight on plain mouse move by unconditionally
highlighting the rolled over item, even if there is enough horizontal
space.

Change-Id: I357001f2e65f843444ed0ffbe470667dfc5d5aa3